unpackaged/main/default/objects/EmailMessage/fields/Forward_to_Payments__c.field-meta.xml
<CustomField>
    <fullName>Forward_to_Payments__c</fullName>
    <label>Forward to Payments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>