unpackaged/main/default/objects/EmailMessage/fields/Pending_The_Phish__c.field-meta.xml
<CustomField>
    <fullName>Pending_The_Phish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending The Phish</label>
    <type>Checkbox</type>
</CustomField>