unpackaged/main/default/objects/EmailMessage/fields/Phishing_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Phishing_Confirmed__c</fullName>
    <inlineHelpText>Enter a value once email is confirmed by The Phish</inlineHelpText>
    <label>Phishing Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Phishing_Email__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>