unpackaged/main/default/objects/EmailMessage/fields/Phishing_Email__c.field-meta.xml
<CustomField>
    <fullName>Phishing_Email__c</fullName>
    <label>Sent to The Phish?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>