unpackaged/main/default/objects/EmailMessage/fields/Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_05__c</fullName>
    <description>Five minutes from now</description>
    <formula>(Now() - 0.038)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time 05</label>
    <type>DateTime</type>
</CustomField>